--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mysql2": "^2.3.3",
-    "sequelize": "^6.25.8"
+    "sequelize": "^6.25.8",
+    "vercel": "^28.7.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
